--- a/config.env
+++ b/config.env
@@ -30,8 +30,8 @@ ENABLE_FILESIZE_LIMIT = false
 MAX_TORRENT_SIZE = 15
 # Add more buttons (two buttons are already added of file link and index link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them, Don't fill anything in them.
-BUTTON_THREE_NAME = ""
-BUTTON_THREE_URL = ""
+BUTTON_THREE_NAME = "INDEX LINKS FOR ALL FILES"
+BUTTON_THREE_URL = "https://mydrive.mxtstellff.workers.dev"
 BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
 BUTTON_FIVE_NAME = ""
