--- a/config_sample.env
+++ b/config_sample.env
@@ -3,16 +3,16 @@ _____REMOVE_THIS_LINE_____=True
 
 # Required Config
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
+BOT_TOKEN = "1748302302:AAEIxFR_Cy889n5VFb2loWvH61E2nYsougk"
+GDRIVE_FOLDER_ID = "13KGw0tKBHNAvko9ZTK9tMkYk0UthOjau"
 DOWNLOAD_DIR = "/home/priiiiyo/mirror-bot/downloads"
-OWNER_ID = ""
+OWNER_ID = "1136734733"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "5"
 AUTO_DELETE_MESSAGE_DURATION = "20"
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-DATABASE_URL = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 3859103
+TELEGRAM_HASH = "d99190789a12c400f65a17b663ad89b5"
+DATABASE_URL = "postgres://vsgdgbig:YG_AZcE1txuRLkXTG2rMPzsVGny46qjv@batyr.db.elephantsql.com/vsgdgbig"
 MAX_DOWNLOAD_SPEED = "0"
 MAX_CONCURRENT_DOWNLOADS = "3"
 TRACKERSLIST = "https://trackerslist.com/all_aria2.txt"
@@ -20,7 +20,7 @@ USE_TELEGRAPH = "false"
 
 # Optional Config
 AUTHORIZED_CHATS = ""
-GROUP_ID = ""  #Add group id to get 'bot restarted' msg after bot restarts
+GROUP_ID = "" 
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
 UPTOBOX_TOKEN = ""
